--- a/Ammi/pubspec.yaml
+++ b/Ammi/pubspec.yaml
@@ -40,6 +40,14 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.10.3
   json_serializable: ^3.5.0
+  flutter_launcher_icons:
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/ammi-icon.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
